fix: contact block layout on mobile devices

--- a/wp-content/themes/somoscuatro/assets/styles/blocks/_contact.css
+++ b/wp-content/themes/somoscuatro/assets/styles/blocks/_contact.css
@@ -4,7 +4,7 @@
 
 	.contact-info {
 
-		@apply grid grid-cols-2 gap-10;
+		@apply grid grid-cols-1 md:grid-cols-2 gap-10;
 	}
 
 	label {
